<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/SettingMenuDialogStyle">

    <TextView
        style="@style/SettingMenuDialogTitleStyle"
        android:text="@string/txt_size"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_set_txt_size_menu_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/zjb_icon_txt_size_small"
            android:paddingRight="28dp"
            android:text="@string/txt_size_small"
            android:textSize="12sp"
            android:textColor="@color/default_white"
            android:gravity="center"
            android:drawablePadding="7dp"/>
        <SeekBar
            android:id="@+id/seekbar_set_txt_size_menu"
            style="@style/SettingMenuDialogSeekBarStyle"/>

        <TextView
            android:id="@+id/tv_set_txt_size_menu_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/zjb_icon_txt_size_large"
            android:paddingLeft="28dp"
            android:text="@string/txt_size_large"
            android:textSize="12sp"
            android:textColor="@color/default_white"
            android:gravity="center"
            android:drawablePadding="7dp"/>


    </LinearLayout>

</LinearLayout>